<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <group
            android:checkableBehavior="single">
        <item android:title="@string/recognition" android:icon="@drawable/ic_photo_black_24dp"
              android:id="@+id/nav_recognition"/>
        <item android:title="@string/information" android:icon="@drawable/ic_info_outline_black_24dp"
              android:id="@+id/nav_info"/>
        <item android:title="@string/history"
              android:icon="@drawable/ic_history_black_24dp"
              android:id="@+id/nav_history" android:visible="false"/>
        <item android:title="@string/log_out"
              android:icon="@drawable/ic_exit_to_app_black_24dp"
              android:id="@+id/nav_logout" android:visible="false"/>
        <item android:title="@string/log_in" android:id="@+id/nav_login"
              android:icon="@drawable/ic_person_black_24dp"/>
    </group>
</menu>