<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".app.ui.LoginActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextMail"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="242dp" app:layout_constraintEnd_toEndOf="parent" android:autofillHints=""
            android:hint="@string/mail"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextPassword" app:layout_constraintStart_toStartOf="@+id/editTextMail"
            android:layout_marginTop="41dp" app:layout_constraintTop_toBottomOf="@+id/editTextMail"
            android:autofillHints="" android:hint="@string/password"/>
    <Button
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSingUp" android:layout_marginTop="41dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            app:layout_constraintEnd_toStartOf="@+id/buttonLogIn" android:layout_marginEnd="36dp"
    />
    <Button
            android:text="@string/log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonLogIn"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonSingUp" android:layout_marginEnd="1dp"
            app:layout_constraintEnd_toEndOf="@+id/editTextPassword"/>
    <Button
            android:text="@string/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSkip"
            app:layout_constraintStart_toStartOf="@+id/buttonLogIn" android:layout_marginTop="38dp"
            android:layout_marginStart="1dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogIn"/>
</android.support.constraint.ConstraintLayout>